--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/examples/data_structures_in_dart"]
 	path = src/examples/data_structures_in_dart
-	url = git@github.com:artem-galas/data_structures_in_dart.git
+	url = https://github.com/artem-galas/data_structures_in_dart.git
