--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Data Structures and Algorithms in Dart
 email: artem.galas@gmail.com
-baseurl: ""
+baseurl: "static_site_data_structures_in_dart"
 url: ""
 github_username:  artem-galas
 repo: 
